footer image make visible

--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <div class="container-fluid">
                 <div class="row">
                     <div class="footerIcone">
-                        <a href=""><img src="/images/whatsapp_icon.png" alt="whatsapp_icon" class="socialIcone" ></a>
-                        <a href=""><img src="/images/instagram_icon.png" alt="instagram_icon" class="socialIcone"></a>
-                        <a href=""><img src="/images/facebook_icon.png" alt="facebook_icon" class="socialIcone"></a>
-                        <a href=""><img src="/images/youtube_icon.png" alt="youtube_icon" class="socialIcone"></a>                             
+                        <a href=""><img src="images/whatsapp_icon.png" alt="whatsapp_icon" class="socialIcone" ></a>
+                        <a href=""><img src="images/instagram_icon.png" alt="instagram_icon" class="socialIcone"></a>
+                        <a href=""><img src="images/facebook_icon.png" alt="facebook_icon" class="socialIcone"></a>
+                        <a href=""><img src="images/youtube_icon.png" alt="youtube_icon" class="socialIcone"></a>                             
                     </div>
                     <span class="text-center mt-3">Develop by ajmal </span>
                 </div>
