--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link   rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="style.css">
 
@@ -42,7 +43,7 @@
         <div class="container">
             <div class="p-2">
                 <div  class="row row-cols-1 row-cols-lg-2 row-cols-md-2">
-                   <form action=""  class="col" id="forms">
+                   <form action="phpmail.php"  class="col" id="forms" method="post">
                     <div>
                         <label for="name" class="form-lable">Name</label>
                         <input type="text" class="form-control" name="name" id="name">
@@ -60,13 +61,13 @@
                     </div>
                     <div>
                         <div class="form-floating mt-3">
-                            <textarea class="form-control" placeholder="Leave a comment here" id="message" id="message" style="height: 100px"></textarea>
+                            <textarea class="form-control" placeholder="Leave a comment here" id="message" name="message" style="height: 100px"></textarea>
                             <label for="message">Message</label>
                         </div>
                     </div>
                     <div>                    
                         <span class="text-danger d-none" id="rating_error">Please give us the rating in 1 to 5</span>
-                        <input type="hidden" id="rating" >
+                        <input type="hidden" id="rating" name="rating" >
                        <div class="rat">
                             <span class="fa fa-star "></span>
                             <span class="fa fa-star "></span>
@@ -75,6 +76,8 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <p class="current-rating">0 of 5</p>
+                        <div class="g-recaptcha captcha" data-sitekey="6Le55kEpAAAAAL0xI-TLDdlpLONFOXkG9KSTaVqU" data-theme='dark'></div>
+                        <span id="g-recaptcha_error" class="d-none text-danger">Please ensure that you are a human!</span>
                        <button class="btn btn-primary mt-2" id="submit">submit</button>
                     </div>
                    </form>
